--- a/presentation.tex
+++ b/presentation.tex
@@ -59,6 +59,8 @@
 \usepackage{templates/tikzkit}
 \usepackage{templates/tikzuml}
 
+\graphicspath{{logos/}, {./images/}}
+
 
 % the presentation starts here
 
@@ -82,7 +84,7 @@
 \begin{document}
 
   % change the following line to "ngerman" for German style date and logos
-  \selectlanguage{ngerman}
+  % \selectlanguage{ngerman}
 
   \setbeamercovered{invisible} % make next text in beamer invisible
 
@@ -93,26 +95,46 @@
 
   \section{Was ist GIT}
 
-  \begin{frame}{Was ist GIT}
+  \begin{frame}{Wie arbeitet man im Team mit eigenen Computern}
     \begin{itemize}[<+->]
-      \item item
+      \item Synchronisation?
+      \item[$\Rightarrow$] Fehleranfällig \pause mehrere arbeiten gleichzeitig?
+      \item[$\Rightarrow$] GIT löst Problem
     \end{itemize}
   \end{frame}
 
-  \section{Was ist GIT 1}
+  \begin{frame}{Versionskontrolle}
+      \begin{columns}
+        \column{0.6\textwidth}
 
-  \begin{frame}{Was ist GIT}
-    \begin{itemize}[<+->]
-      \item item
-    \end{itemize}
+          \begin{itemize}
+            \item Verschiedene Versionen
+            \item Jeder arbeitet an seinen \textit{Versionen} der Dateien
+            \item \textbf{Commit} gibt die Information weiter
+            \item \textbf{Merge} fügt die verschiedenen Versionen zusammen
+          \end{itemize}
+
+        \column{0.4\textwidth}
+          \begin{figure}
+            \includegraphics[width=0.9\columnwidth]{version-control-centralized}
+            \caption{Versionskontrolle mit zentralem VCS Sever \\
+            \tiny{\url{https://git-scm.com/book/en/v2/images/centralized.png}; Abgerufen am 08.05.2018}}
+          \end{figure}
+      \end{columns}
   \end{frame}
 
-  \section{Was ist GIT 2}
+  \section{Git als VCS}
 
-  \begin{frame}{Was ist GIT}
-    \begin{itemize}[<+->]
-      \item item
-    \end{itemize}
+  \begin{frame}{Git}
+    \begin{columns}
+      \column{0.7\textwidth}
+        \begin{itemize}
+          \item Eine Möglichkeit unter vielen (\textit{SVN, Git, Mercurial...})
+          \item Entwickelt von Linus Torwalds für den \textbf{Linux Kernel}
+        \end{itemize}
+      \column{0.3\textwidth}
+        \includegraphics[width=0.9\columnwidth]{git}
+    \end{columns}
   \end{frame}
 
 
