--- a/presentation.tex
+++ b/presentation.tex
@@ -153,7 +153,7 @@
                                               \item Bitbucket
                                             \end{itemize}
       \end{itemize}
-      \onslide<+>{
+      \onslide<+->{
         \begin{block}{Command}
           \texttt{git clone <url>}
         \end{block}
@@ -370,13 +370,13 @@
 
   \section[Teilen]{Teilen von Arbeit}
 
-    \begin{frame}{push}
+    \begin{frame}{Push - Arbeit auf einen Server laden}
       \begin{columns}
         \column{0.5\textwidth}
           \begin{itemize}[<+->]
             \item Lokal gespeichert im Baum
             \item Mit mehreren Teilen
-            \item<.-> Auf einen Server hosten
+            \item<.->[$\rightarrow$] Auf einen Server hosten
             \item \textit{GitHub, GitLab, Bitbucket}
           \end{itemize}
           \onslide<+->{
@@ -387,8 +387,8 @@
         \column{0.4\textwidth}
           \onslide<+->{
             \begin{figure}
-              \includegraphics[width=.9\columnwidth]{centralized-workflow}
-              \caption{Zentral gehostete git Repository}
+              \includegraphics[width=.9\columnwidth]{centralized_workflow}
+              \caption{Zentral gehostete git Repository \tiny\url{git-scm.com/book/en/v2/images/centralized_workflow.png}, 08.05.2018}
             \end{figure}
           }
       \end{columns}
