--- a/templates/beamerthemekitwide.sty
+++ b/templates/beamerthemekitwide.sty
@@ -89,6 +89,7 @@
 	\vbox{\hsize=9cm\bfseries\insertframetitle}
 	\vspace{-2mm}
 	\vbox{\hsize=9cm\footnotesize{\color{lightgray} \insertframesubtitle}}
+	\vspace{-2ex}
 
 	\begin{textblock*}{15mm}(123.6mm,9mm)
 		\includegraphics[width=24mm]{logos/AES_Logo_Blaugrau}
